--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=CafeManager-1
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/cafeMgmt
 spring.datasource.username=cafeMgmt
-spring.datasource.password=Root@123
+spring.datasource.password=cafeMgmt
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
