--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=CafeManager-1
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/cafeMgmt
-spring.datasource.username=cafeMgmt
-spring.datasource.password=cafeMgmt
+spring.datasource.url=jdbc:postgresql://localhost:5432/cafemanagement
+spring.datasource.username=cafemanagement
+spring.datasource.password=cafemanagement
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
